canvas container size fixed gameObjects rendered to screen

--- a/index.html
+++ b/index.html
@@ -48,3 +48,53 @@
     
 </body>
 </html>
+
+
+<!-- Pseudo Code 
+
+Game Steps ===>
+player starts the game
+start moving player forward
+objects begin moving across screen 
+player can move around the screen to avoid obstacles
+timer to track how long player has survived, when certain time has been reached the player wins 
+after win, player gets option to continue, or restart
+
+Functions ===>
+start game 
+check for collisions
+    -> collision logic
+    -> display game over if collision detected
+check for winning time limit 
+    -> display game won message if time limit reached 
+    -> display continue game button 
+
+Forms ===>
+game title 
+game instructions
+game over message 
+game won message
+start button 
+restart button 
+
+Planning ===>
+
+Xwing Class
+    -> controls player movement 
+
+Tie Class 
+    -> controls AI movement 
+
+Run Game Class
+    -> time set to null
+    -> method to increment time
+    -> collision detection
+
+HTML ===>
+get canvas set up 
+start game button
+restart game button
+
+CSS ===>
+basic grid layout 
+styling once JS complete -->
