all arrow keys work pause button added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <div id="restartButton">
                 <button>Restart</button>
             </div>
+            <!-- Pause Game Button -->
+            <div id="pauseButton">
+                <button>Pause</button>
+            </div>
         </div>
         <!-- End Game Button Container -->
     </div>
