message saying you died and reset button on collision working stops game play on collision

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <p class="titleMessage">A long time ago in a galaxy inside your browser....</p>
             <p class="titleMessage">With the Galaxy in a state of chaos you must race past the Empires fleet of tie fighter to aid the rebellion in there next attempt to thwart the Emperors evil plans. </p>
             <p class="titleMessage">Use the force... of your fingers and your best pilot skills to navigate through the dreaded Tie Fighter Army!</p>
+            <h1 id="statusMessage">how long can you survive</h1>
+            <div id="restartButton"></div>
         </div>
         
         <!-- Gameboard Container-->
@@ -37,10 +39,10 @@
             <div id="startButton">
                 <button>Start the Journey</button>
             </div>
-            <!-- Restart Game Button -->
+            <!-- Restart Game Button
             <div id="restartButton">
                 <button>Restart</button>
-            </div>
+            </div> -->
             <!-- Pause Game Button -->
             <div id="pauseButton">
                 <button>Pause</button>
