add clok that counts seconds when start button clicked

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div id="startButton">
                 <button>Start the Journey</button>
             </div>
-            <!-- Restart Game Button
-            <div id="restartButton">
+            <!-- Restart Game Button -->
+            <!-- <div id="restartButton">
                 <button>Restart</button>
             </div> -->
             <!-- Pause Game Button -->
