adds seconds timer that logs seconds passed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         
         <!-- Start Game Button Container -->
         <div class="buttons">
+            <div id="timer">
+                <p>time</p>
+            </div>
             <!-- Start Game Button --> 
             <div id="startButton">
                 <button>Start the Journey</button>
