displays you won after time limit met

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <!-- Start Game Button Container -->
         <div class="buttons">
             <div id="timer">
-                <p>time</p>
+                <!-- <p>time</p> -->
+                <time></time>
             </div>
             <!-- Start Game Button --> 
             <div id="startButton">
