tiefighters loop correctly

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Game Instructions -->
         <div class="instructions">
             <h2>Instructions</h2>
-            <p>Move your Tie Fighter using the ARROW KEYS to avoid objects and the incoming Tie Fighters </p>
+            <p>Move your Tie Fighter using the ARROW KEYS to avoid objects and the incoming Tie Fighters. </p>
             <p>Survive long enough and you win!</p> 
         </div>
         
