code cleaned commented and dried amap

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="gameTitle">
             <h1>X-Wing vs Tie-Fighters</h1>
             <p class="titleMessage">A long time ago in a galaxy inside your browser....</p>
-            <h1 id="statusMessage">how long can you survive</h1>
+            <h1 id="statusMessage">How long can you survive?</h1>
         </div>
         
         <!-- Gameboard Container-->
